# mira

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vibe.example.yaml
docs/superpowers/specs/: 2026-05-06-new-project-wizard-design.md  2026-05-06-safari-tab-switcher-design.md
static/: index.html  settings.js
static/fonts/: fonts.css
tests/: test_api.py  test_config.py  test_history_db.py  test_models.py  test_session_indexer.py
tests/collectors/: test_design_docs.py  test_features.py  test_git.py  test_service.py
vibe/: aggregator.py  ai_brainstorm.py  balance.py  cache_db.py  config.py  detail_page.py  dev_page.py  history_db.py  main.py  models.py  new_project_page.py  overview_page.py  remote_client.py  scanner.py  session_indexer.py  stats_page.py  summarizer.py  terminal_monitor.py  test_brainstorm.py  tmux_bridge.py  topbar.py
vibe/collectors/: claude_sessions.py  codex_sessions.py  dependencies.py  design_docs.py  features.py  git.py  llm.py  service.py
